[gd_scene load_steps=10 format=3 uid="uid://cum4o46q1ko7s"]

[ext_resource type="Script" path="res://Characters/Player/player.gd" id="1_b8ru6"]
[ext_resource type="Material" uid="uid://ii3g3xaadles" path="res://Characters/character materials/shirt materials/red.tres" id="2_5f1lr"]
[ext_resource type="Script" path="res://Characters/Player/PlayerSynchronizer.gd" id="2_l4uuh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rege4"]
albedo_color = Color(1, 0.878431, 0.270588, 1)
emission_enabled = true
emission = Color(1, 0.968627, 0.803922, 1)

[sub_resource type="PrismMesh" id="PrismMesh_f1h3y"]
material = SubResource("StandardMaterial3D_rege4")

[sub_resource type="CylinderMesh" id="CylinderMesh_wr8mu"]
resource_local_to_scene = true
material = ExtResource("2_5f1lr")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gmg3d"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_x34pl"]
properties/0/path = NodePath("../PlayerInput:direction")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("../PlayerInput:shirt_material")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("../PlayerInput:display_name")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_nm2p0"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:player")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:velocity")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:shirt_material")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:display_name")
properties/4/spawn = true
properties/4/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_b8ru6")

[node name="Indicator" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.2, 1.74846e-08, 0, -1.74846e-08, -0.2, 0, 0, 0, 0.2, 0, 1.66025, 0)
visible = false
cast_shadow = 0
mesh = SubResource("PrismMesh_f1h3y")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 1, 0)
mesh = SubResource("CylinderMesh_wr8mu")
skeleton = NodePath("../CollisionShape3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 1.00029, 0)
shape = SubResource("CylinderShape3D_gmg3d")

[node name="PlayerInput" type="MultiplayerSynchronizer" parent="."]
root_path = NodePath("../ServerSynchronizer")
replication_config = SubResource("SceneReplicationConfig_x34pl")
script = ExtResource("2_l4uuh")

[node name="ServerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_nm2p0")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 3)

[node name="Name" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4227, 0)
text = "Mary
"

[connection signal="name_change" from="PlayerInput" to="." method="_on_player_input_name_change"]
[connection signal="shirt_color_index_change" from="PlayerInput" to="." method="_on_player_input_shirt_color_index_change"]
